cmake_minimum_required(VERSION 3.10.2)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_1")

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_2")

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_3")

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_3_lib")

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_4")

add_subdirectory("${PROJECT_SOURCE_DIR}/chalendge_2")

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_5")

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_6")

add_subdirectory("${PROJECT_SOURCE_DIR}/lesson_7")

add_subdirectory("${PROJECT_SOURCE_DIR}/oop/lesson_2")

add_subdirectory("${PROJECT_SOURCE_DIR}/oop/lesson_3")

add_subdirectory("${PROJECT_SOURCE_DIR}/oop/lesson_4")

add_subdirectory("${PROJECT_SOURCE_DIR}/oop/black-jack")

add_subdirectory("${PROJECT_SOURCE_DIR}/oop/lesson_5")
